--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
-        "twig/twig": "^2.1"
+        "twig/twig": "^2.1",
+        "illuminate/database": "^5.4"
+    }, "autoload": {
+        "psr-4": { "Lekardal\\": "models/" }
     }
 }
